# OT-harjoitustyo

./: .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  kayttoohje.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/: kassapaate.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: index.py
src/data/: exiftooldb.db  metadata_subprocess.py
src/domain/: metadataTools.py
src/services/: metadata_info.py  metadata_tool.py
src/tests/: metadataTools_test.py  metadata_info_test.py  metadata_subprocess_test.py  metadata_tool_test.py
src/ui/: textUi.py  text_ui.py  ui.py
