[tool.poetry]
name = "Metadataeditori"
version = "0.1.0"
description = ""
authors = ["kurkilmo <ilmo.kurki00gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
hachoir = "^3.1.2"
invoke = "^1.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
